Update notebook file

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -8,7 +8,9 @@
    "source": [
     "import xarray as xr\n",
     "import matplotlib.pyplot as plt\n",
+    "import os\n",
     "\n",
+    "import download_data\n",
     "import read_grib\n"
    ]
   },
@@ -18,10 +20,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create data directory if it does not exist\n",
+    "if not os.path.exists('data'):\n",
+    "    os.makedirs('data')\n",
+    "\n",
+    "# Download data\n",
+    "download_data.get_latest_data()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Open data file\n",
     "filepath = read_grib.get_recent_data_path()\n",
     "ds = xr.open_dataset(filepath, engine='cfgrib',\n",
     "                     backend_kwargs={'errors': 'ignore', 'indexpath': ''},\n",
-    "                     filter_by_keys={'typeOfLevel': 'isobaricInhPa'})\n",
+    "                     filter_by_keys={'typeOfLevel': 'isobaricInhPa'})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Select latitude and longitude\n",
     "ds = ds.sel(latitude=37.25, longitude=126.5)\n",
     "ds\n"
    ]
@@ -32,6 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Geopotential height - Pressure graph\n",
     "plt.plot(ds['gh'], ds['isobaricInhPa'])\n"
    ]
   },
@@ -41,6 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Geopotential height - Temperature graph\n",
     "plt.plot(ds['gh'], ds['t'])\n"
    ]
   },
